--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "laravel/ui": "^3.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
