--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-loader": "^17.0.0",
         "vue-router": "^4.0.14",
         "vue-template-compiler": "^2.6.14",
+        "vuejs-paginate-next": "^1.0.2",
         "vuex": "^4.0.2"
     }
 }
